# python-project-52

./: .env_example  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
task_manager/: forms.py  settings.py  test.py  urls.py  views.py
task_manager/fixtures/: users.json
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/static/: cover.css
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_status_created_at.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py  0002_task_labels.py  0003_alter_task_description_alter_task_executor_and_more.py
task_manager/tasks/tests/: tests.py  tests_filter.py
task_manager/templates/: base copy.html  base.html  index.html  login.html  users.html
task_manager/templates/labels/: labels_create.html  labels_delete.html  labels_list.html  labels_update.html
task_manager/templates/statuses/: create.html  list.html  status_delete.html  status_update.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_info.html  task_update.html  tasks_list.html
task_manager/templates/users/: create.html  update.html  user_delete.html  users_list.html
task_manager/tests/: test_labels.py  test_statuses.py  test_tasks.py  test_tasks_filter.py  test_users.py
task_manager/users/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
