[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["qffo <075viktor@mail.ru>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
python-dotenv = "^1.0.1"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
django-bootstrap5 = "^24.3"
rollbar = "^1.1.0"
whitenoise = "^6.8.2"
django-filter = "^24.3"
ruff = "^0.8.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E", "W", "I", "C90"]
exclude = ["*/migrations/*", "settings.py"]
